# API-Gateway

./: .env  .env.docker  .gitignore  .pre-commit-config.yml  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
pgdata/18/docker/: postmaster.pid
pgdata/18/docker/base/16384/: 2619
pgdata/18/docker/global/: 1260  1262  pg_control
src/: application.py  bootstrap.py
src/clients/: base_client.py
src/common/: config.py  container.py  enums.py
src/common/database/: postgres.py
src/interfaces/: client.py  router.py
src/models/: config.py
src/repositories/: example_repository.py
src/routers/: default.py  example.py
src/services/: example.py
tests/: confest.py
tests/test_handlers/: test_default_router.py
